<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_from"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/fromEmail"
        app:layout_constraintBottom_toTopOf="@id/fromEmail" />

    <EditText
        android:id="@+id/fromEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/from_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_host"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/fromHost"
        app:layout_constraintStart_toStartOf="@+id/fromHost" />

    <EditText
        android:id="@+id/fromHost"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/from_host"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromPasswd"
        tools:text="@string/from_host" />

    <TextView
        android:id="@+id/label_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_port"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/fromPort"
        app:layout_constraintStart_toStartOf="@+id/fromPort" />

    <EditText
        android:id="@+id/fromPort"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/from_port"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fromHost" />

    <TextView
        android:id="@+id/label_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_passwd"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/fromPasswd"
        app:layout_constraintStart_toStartOf="@+id/fromPasswd" />

    <EditText
        android:id="@+id/fromPasswd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/from_passwd"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromEmail" />

    <TextView
        android:id="@+id/label_to1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_to1"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/to1"
        app:layout_constraintStart_toStartOf="@+id/to1" />

    <EditText
        android:id="@+id/to1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        android:ems="10"
        android:hint="@string/to1"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromHost" />

    <TextView
        android:id="@+id/label_to2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_to2"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/to2"
        app:layout_constraintStart_toStartOf="@+id/to2" />

    <EditText
        android:id="@+id/to2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/to2"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to1" />

    <Button
        android:id="@+id/run"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/run"
        android:textStyle="bold"
        android:onClick="run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to2" />

</androidx.constraintlayout.widget.ConstraintLayout>